[workspace]
resolver = "2"
members = [
    "services/document-service",
    "services/notification-service",
    "services/gateway-service",
    "shared/common",
    "shared/security",
    "shared/database",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Platform Migration Team <platform@example.com>"]
repository = "https://github.com/randallard/platform-migration"
homepage = "https://github.com/randallard/platform-migration"
documentation = "https://github.com/randallard/platform-migration/blob/main/README.md"
keywords = ["microservices", "migration", "wasm", "spin", "kubernetes"]
categories = ["web-programming", "wasm"]

[workspace.dependencies]
# Spin SDK and related dependencies
spin-sdk = "3.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Web framework dependencies
axum = { version = "0.7", features = ["tokio", "json", "headers"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Database dependencies
sqlx = { version = "0.8", features = ["postgres", "chrono", "uuid", "runtime-tokio-rustls"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Cryptography and security
ring = "0.17"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Observability and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.23"
opentelemetry-jaeger = "0.22"
metrics = "0.22"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration and environment
config = "0.14"
dotenvy = "0.15"

# Async and concurrency
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"
eyre = "0.6"

# Template engine for notifications
handlebars = "5.1"
tera = "1.19"

# JSON Web Tokens
jsonwebtoken = "9.2"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Testing dependencies
[workspace.dependencies.test-deps]
package = "tokio-test"
version = "0.4"

[workspace.dependencies.mock-deps]
package = "mockall"
version = "0.12"

# Development dependencies for all workspace members
[workspace.dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
assert_matches = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

# Workspace-level configuration
[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Profile optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

# WASM-specific optimizations
[profile.release.package."*"]
opt-level = "s"  # Optimize for size in WASM builds

# Benchmark profile
[profile.bench]
opt-level = 3
debug = true
